cabal-version:       2.2

name:                aoc2020
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Nathan van Doorn
maintainer:          nvd1234@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library problem1-lib
  build-depends:       base
  hs-source-dirs:      src/problem1
  exposed-modules:     Problem1
  default-language:    Haskell2010

executable problem1
  build-depends:       base
                     , problem1-lib
  hs-source-dirs:      bin
  main-is:             problem1.hs
  default-language:    Haskell2010

benchmark bench-problem1
  build-depends:       base
                     , problem1-lib
                     , criterion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             problem1.hs
  default-language:    Haskell2010

executable problem2
  build-depends:       base
  hs-source-dirs:      bin
  main-is:             problem2.hs
  default-language:    Haskell2010
  default-language:    Haskell2010

